--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -218,7 +218,7 @@ text-decoration: none;
 
 
 .homepage-section {
-   margin: 90px 0px 0px 0px;
+   margin: 90px 0px 20px 0px;
   border-radius: 8px;
 }
 
@@ -229,9 +229,8 @@ text-decoration: none;
 }
 
 .section-header p {
-  font-size: 1rem;
   text-align: center;
-  margin: 0px 0px 30px 0px;
+  margin: auto;
 }
 
 .explore-button {
@@ -260,7 +259,8 @@ text-decoration: none;
 
 .box {
   display: block;
-  max-width: 100%;
+  max-width: 400px;
+  min-width: 300px;
   text-align: center;
   border-radius: 8px;
   overflow: hidden;
