--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -218,7 +218,7 @@ text-decoration: none;
 
 
 .homepage-section {
-   margin: 90px 0px 20px 0px;
+   margin: 50px 0px 20px 0px;
   border-radius: 8px;
 }
 
@@ -230,7 +230,9 @@ text-decoration: none;
 
 .section-header p {
   text-align: center;
-  margin: auto;
+  margin: 0px auto 20px;
+  max-width: 900px;
+  color var(--light-text-color)
 }
 
 .explore-button {
