--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 --light-text-color: #A5A500;
 --search-border-color: grey;
 --link-color: #00FFFF;
---link-color: red;
+--link-color: #FF2828;
 --bg-color: black;
 --light-bg-color: rgb(25,25,25);
 --header-bg-color: black;
