--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 :root {
 --font-size: 18px; 
+--text-color: #FFFDD0;
 --text-color: #E1E132;
 --light-text-color: #A5A500;
 --search-border-color: grey;
