--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -270,14 +270,15 @@ text-decoration: none;
 .box img {
   width: 100%;
   height: 200px;
+  object-fit: cover;
 }
 
 .box h3 {
 text-decoration: none;
-margin: 0;
-padding: 1rem;
-background-color: rgb(30,30,30);
-min-height: 100px;
+  margin: 0;
+  padding: 1rem;
+  background-color: rgb(30,30,30);
+  min-height: 100px;
 }
 
 @media (max-width: 850px) {
