--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -146,6 +146,7 @@ text-decoration: none;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  margin-bottom: 20px;
 }
 
 /* Individual box styles */
