--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -217,7 +217,7 @@ text-decoration: none;
 
 
 
-
+/*
 .homepage-section {
    margin: 50px 0px 20px 0px;
   border-radius: 8px;
@@ -285,3 +285,4 @@ text-decoration: none;
   .box {
   }
 }
+*/
