--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 --search-border-color: grey;
 --link-color: #FF2828;
 --link-color: #00FFFF;
+--link-color: #FFFDD0;
 --bg-color: black;
 --light-bg-color: rgb(25,25,25);
 --header-bg-color: black;
