--- a/layouts/partials/x.html
+++ b/layouts/partials/x.html
@@ -1,5 +1,5 @@
 {{ if not .Params.hide_share }}
 <div class="share">
-<a href="http://twitter.com/share?url={{ .Permalink | urlize }}{{ with .Params.tweet }}&text={{ . | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter">{{ i18n "shareOn" }} <i class="fab fa-x-twitter"></i></a>
+<a href="http://twitter.com/share?url={{ .Permalink | urlize }}{{ with .Title }}&text={{ . | urlquery }}{{ end }}" class="twitter" aria-label="Share on Twitter">{{ i18n "shareOn" }} <i class="fab fa-x-twitter"></i></a>
 </div>
 {{ end }}
