--- a/layouts/partials/home/featured-boxes.html
+++ b/layouts/partials/home/featured-boxes.html
@@ -20,35 +20,27 @@
 <div class="featured-boxes">
   {{ range .Site.Params.featured_boxes }}
     <div class="featured-box">
-      <a href="{{ .link }}" class="box-link">
-        <div class="image">
-          {{ $page := site.GetPage .link }}
-          {{ if $page }}
+      {{ $page := site.GetPage . }}
+      {{ if $page }}
+        <a href="{{ $page.RelPermalink }}" class="box-link">
+          <div class="image">
             {{ with $page.Params.image }}
               <img src="{{ . | relURL }}" alt="{{ $page.Params.title | default "Featured Image" }}">
             {{ end }}
-          {{ end }}
-        </div>
-        <div class="content">
-          {{ $page := site.GetPage .link }}
-          {{ if $page }}
+          </div>
+          <div class="content">
             {{ with $page.Params.title }}
               <h3>{{ . }}</h3>
             {{ end }}
             {{ with $page.Params.description }}
               <p>{{ . }}</p>
             {{ end }}
-          {{ else }}
-            <!-- Fallback to values in featured_boxes if page is not found -->
-            {{ with .title }}
-              <h3>{{ . }}</h3>
-            {{ end }}
-            {{ with .description }}
-              <p>{{ . }}</p>
-            {{ end }}
-          {{ end }}
-        </div>
-      </a>
+          </div>
+        </a>
+      {{ else }}
+        <!-- Optionally handle cases where the page doesn't exist -->
+        <p>Page not found for {{ . }}</p>
+      {{ end }}
     </div>
   {{ end }}
 </div>
