--- a/layouts/partials/home/featured-boxes.html
+++ b/layouts/partials/home/featured-boxes.html
@@ -39,7 +39,7 @@
         </a>
       {{ else }}
         <!-- Optionally handle cases where the page doesn't exist -->
-        <p>Page not found for {{ . }}</p>
+        <p>Page not found: {{ . }}</p>
       {{ end }}
     </div>
   {{ end }}
