--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -12,9 +12,41 @@
 {{ i18n "citation" }}
 </div>
 
-{{ partial "home/featured-boxes.html" . }}
-{{ partial "home/quick-links.html" . }}
-{{ partial "home/list-boxes.html" . }}
+
+<div class="featured-boxes">
+  {{ range where .Site.Pages ".Params.featured" true }}
+    <div class="featured-box">
+      {{ $page := . }}
+      {{ if $page }}
+        <a href="{{ $page.RelPermalink }}" class="box-link">
+          <div class="image">
+            {{ with $page.Params.image }}
+              <img src="{{ . | relURL }}" alt="{{ $page.Params.title | default "Featured Image" }}">
+            {{ end }}
+          </div>
+          <div class="content">
+            {{ with $page.Params.title }}
+              <h3>{{ . }}</h3>
+            {{ end }}
+            {{ with $page.Params.description }}
+              <p>{{ . }}</p>
+            {{ end }}
+          </div>
+        </a>
+      {{ else }}
+        <!-- Optionally handle cases where the page doesn't exist -->
+        <div class="content">
+          <p>Page not found: {{ . }}</p>
+        </div>
+      {{ end }}
+    </div>
+  {{ end }}
+</div>
+
+
+
+
+
 </div>
 
 {{ end }}
