--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -13,12 +13,18 @@
 </div>
 
 
+
+
 <div class="featured-boxes">
-  {{ range where .Site.Pages ".Params.featured" true }}
+  {{ range .Site.Pages }}
+    {{ if or (.Params.featured) (and .IsSection (index .Files.ByName "_index.md" 0)) }}
     <div class="featured-box">
       {{ $page := . }}
+      {{ if and .IsSection (index .Files.ByName "_index.md" 0) }}
+        {{ $page = (index .Files.ByName "_index.md" 0) }}
+      {{ end }}
       {{ if $page }}
-        <a href="{{ $page.RelPermalink }}" class="box-link">
+        <a href="{{ .RelPermalink }}" class="box-link">
           <div class="image">
             {{ with $page.Params.image }}
               <img src="{{ . | relURL }}" alt="{{ $page.Params.title | default "Featured Image" }}">
@@ -40,6 +46,7 @@
         </div>
       {{ end }}
     </div>
+    {{ end }}
   {{ end }}
 </div>
 
