--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -26,22 +26,15 @@
         <a href="{{ .RelPermalink }}" class="box-link">
           <div class="image">
             {{ with $page.Params.image }}
-              <img src="{{ . | relURL }}" alt="{{ $page.Params.title | default "Featured Image" }}">
-            {{ else }}
-              <!-- Optional placeholder image if none is provided -->
-              <img src="/images/placeholder.jpg" alt="Placeholder Image">
+              <img src="{{ . | relURL }}" alt="{{ $page.Params.title }}">
             {{ end }}
           </div>
           <div class="content">
             {{ with $page.Params.title }}
               <h3>{{ . }}</h3>
-            {{ else }}
-              <h3>Untitled</h3>
             {{ end }}
             {{ with $page.Params.description }}
               <p>{{ . }}</p>
-            {{ else }}
-              <p>No description available.</p>
             {{ end }}
           </div>
         </a>
