--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -16,7 +16,7 @@
 
 
 <div class="featured-boxes">
-  {{ range .Site.Pages }}
+  {{ range .Pages }}
     {{ if .Params.featured }}
       <div class="featured-box">
         <a href="{{ .RelPermalink }}" class="box-link">
