--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -22,7 +22,7 @@
         <a href="{{ .RelPermalink }}" class="box-link">
           <div class="image">
             {{ with .Params.image }}
-              <img src="{{ . | relURL }}" alt="{{ .Params.title }}">
+              <img src="{{ . | relURL }}" alt="">
             {{ end }}
           </div>
           <div class="content">
