--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -7,74 +7,13 @@ font-style: italic;
 font-weight: bold;
 }
 
-.home .quick-links {
-margin: 20px auto 20px;
-}
-
-.home .heading {
-text-align: center;
-font-weight: bold;
-margin-top: 20px;
-}
-.home .heading a {
-color: var(--text-color);
-}
-
-.home .quick-links-container {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-gap: 20px;
-}
-
-.home .quick-links-group {
-padding: 15px;
-border-radius: 5px;
-width: 260px;
-border: 2px solid var(--border-color);
-}
-
-.home .quick-links-group:hover {
-border: 2px solid var(--light-text-color);
-}
-
-.home .quick-links-group .title {
-font-weight: bold;
-font-size: 20px;
-}
-.home .quick-links-group .title a {
-color: var(--text-color)
-}
-
-.home .quick-links ul {
-padding: 10px 0px 0px 0px;
-margin: 0px 0px 0px 0px;
-list-style: inside;
-}
-
-.home .home .quick-links li {
-margin-bottom: 2px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Container for the featured boxes */
 .featured-boxes {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  margin: 0px 0px 20px 0px;
 }
 
 /* Individual box styles */
@@ -144,173 +83,8 @@ margin-bottom: 2px;
 
 /* Mobile responsive styles */
 @media (max-width: 500px) {
-  .featured-box, .home .quick-links-group {
+  .featured-box {
     width: 100%;
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Container for the list boxes */
-.list-boxes {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-/* Individual box styles */
-.list-box {
-  background-color: transparent;
-  border: 2px solid var(--border-color);
-  border-radius: 8px;
-  padding: 15px;
-  width: 260px;  /* Fixed width for boxes */
-  text-align: center;
-  cursor: pointer;
-}
-
-.list-box a {
-  text-decoration: none;
-  color: inherit;
-  display: block;
-  height: 100%;
-  width: 100%;
-}
-
-/* Icon styles */
-.list-box .icon {
-  font-size: 40px;
-  color: var(--text-color);  /* White icon color */
-  margin-bottom: 10px;
-}
-
-/* Title styles */
-.list-box h3 {
-  color: var(--text-color);  /* White text for the title */
-  font-size: 1.2em;
-   margin: 0px auto 10px;
-}
-
-/* Description styles */
-.list-box p {
-  color: var(--light-text-color);  /* Light grey text for the description */
-  font-size: 1em;
-}
-
-/* Hover effect */
-.list-box:hover {
-  border-color: var(--light-text-color);  /* Highlight border on hover */
-}
-
-.list-box:hover a {
-  text-decoration: none;
-}
-
-/* Mobile responsive styles */
-@media (max-width: 850px) {
-  .list-box {
-    width: 100%;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-.homepage-section {
-   margin: 50px 0px 20px 0px;
-  border-radius: 8px;
-}
-
-.section-header h2 {
-  font-size: 40px;
-  margin-bottom: 0.5rem;
-  text-align: center;
-}
-
-.section-header p {
-  text-align: center;
-  margin: 0px auto 20px;
-  max-width: 900px;
-}
-
-.explore-button {
-  display: block;
-  padding: 0.5rem 1rem;
-  margin: 0px auto 40px;
-  color: #ffffff;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background 0.3s;
-  text-align: center;
-  max-width: 150px;
-}
-
-.explore-button:hover {
-  text-decoration: none;
-  background-color: #505050;
-}
-
-.section-content {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-  justify-content: center; /* Center content on smaller screens */
-}
-
-.box {
-  display: block;
-  max-width: 400px;
-  min-width: 300px;
-  text-align: center;
-  border-radius: 8px;
-  overflow: hidden;
-}
-
-.box img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.box h3 {
-  margin: 0;
-  padding: 1rem;
-  background-color: rgb(30,30,30);
-  min-height: 100px;
-}
-
-@media (max-width: 850px) {
-  .box {
-  }
-}
-*/
