--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,8 +34,8 @@
 {{ end }}
 
 <meta name="twitter:card" content="{{ .Params.image | absURL }}" />
-<meta name="twitter:site" content="@BroMatthewCap" />
-<meta name="twitter:creator" content="@BroMatthewCap" />
+<meta name="twitter:site" content="@BroMatthewOFMC" />
+<meta name="twitter:creator" content="@BroMatthewOFMC" />
 <meta name="twitter:title" content="{{ .Title }}" />
 <meta name="twitter:description" content="{{ .Summary }}" />
 <meta name="twitter:image" content="{{ .Params.image | absURL }}" />
