--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -36,6 +36,28 @@
   {{ end }}
 </div>
 
+
+
+{{- $contentDir := .Site.BaseURL | relURL "/content" -}}
+{{- $contentPages := .Site.RegularPages -}}
+{{- $contentItems := slice -}}
+
+{{- range $contentPages }}
+  {{- if eq .Section "content" }}
+    {{- $contentItem := dict "title" .Title "url" .Permalink -}}
+    {{- $contentItems = append $contentItems $contentItem -}}
+  {{- end }}
+{{- end }}
+
+{{- $contentItems | jsonify }}
+
+
+
+
+
+
+
+
 </div>
 
 {{ end }}
