--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -41,11 +41,10 @@ textarea {
 
 button {
     padding: 10px;
-    background-color: var(--link-color); 
-    color: #ffffff; /* Button text color */
-    border: none;
+    background-color: transparent; 
+    color: var(--text-color); /* Button text color */
     border-radius: 4px;
-    font-size: 16px;
+    font-size: var(--font-size);
     cursor: pointer;
     transition: background-color 0.3s;
     box-sizing: border-box; /* Include padding and border in the element's total width */
