--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
 --font-family: 'Nunito', sans-serif;
 --logo-bg-color: var(--text-color);
 --border-color: #444;
+--border-color-highlight: #66afe9;
 }
 
 [data-theme="light"] {
