--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
 --small-font: 14px;
 --font-family: 'Nunito', sans-serif;
 --logo-bg-color: var(--text-color);
---border-color: #444;
+--border-color: rgb(100,100,100);
 --border-color-highlight: #66afe9;
 }
 
