--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,20 +16,20 @@
     <span></span>
     <span></span>
   </label>
-  <ul class="nav-menu">
-    {{ range .Site.Menus.main }}
-      <li>
-        <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>
-          {{ if .Params.pre }}
-            {{ partial .Params.pre . }}
-          {{ else if .Pre }}
-            {{ .Pre | safeHTML }}
-          {{ end }}
-          {{ .Name }}
-        </a>
-      </li>
-    {{ end }}
-  </ul>
+<ul class="nav-menu">
+  {{ range .Site.Menus.main }}
+    <li>
+      <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>
+        {{ if .Params.pre }}
+          {{ partial (printf "icons/%s.html" .Params.pre) . }}
+        {{ else if .Pre }}
+          {{ .Pre | safeHTML }}
+        {{ end }}
+        {{ .Name }}
+      </a>
+    </li>
+  {{ end }}
+</ul>
 </nav>
 
 </div>
