--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,10 +21,8 @@
   {{ range .Site.Menus.main }}
     <li>
       <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>
-        {{ if .Params.pre }}
-          {{ partial (printf "icons/%s.html" "x") . }}
-        {{ else if .Pre }}
-          {{ .Pre | safeHTML }}
+        {{ if .Pre }}
+          {{ partial (printf "icons/%s.html" .Pre) . }}
         {{ end }}
         {{ .Name }}
       </a>
