--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -51,6 +51,9 @@ nav ul li a {
   font-weight: bold;
   color: var(--text-color);
 }
+nav ul li a svg {
+height: 30px;
+}
 
 nav ul li a:hover {
   color: var(--link-color);
