--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,3 @@
-
 <header>
 <div class="container">
 <div class="header-content">
@@ -9,7 +8,28 @@
   </a>
 </div>
 
+<nav>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  <label for="menu-toggle" class="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </label>
+  <ul class="nav-menu">
+    {{ range .Site.Menus.main }}
+      <li>
+        <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>{{ .Pre }}{{ .Name }}</a>
+      </li>
+    {{ end }}
+  </ul>
+</nav>
 
+</div>
+</div>
+</header>
+
+
+<!--
 <nav>
   <input type="checkbox" id="menu-toggle" class="menu-toggle">
   <label for="menu-toggle" class="hamburger">
@@ -30,7 +50,4 @@
   {{ end }}
 </ul>
 </nav>
-
-</div>
-</div>
-</header>
+-->
