--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,9 @@
   <ul class="nav-menu">
     {{ range .Site.Menus.main }}
       <li>
-        <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>{{ .Pre }}{{ .Name }}</a>
+        <a class="gg-youtube" href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>
+        {{ .Pre }}{{ .Name }}
+        </a>
       </li>
     {{ end }}
   </ul>
