--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,8 +18,7 @@
   <ul class="nav-menu">
     {{ range .Site.Menus.main }}
       <li>
-        <a class="gg-youtube" href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>
-        </a>
+        <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>{{ .Pre }}{{ .Name }}</a>
       </li>
     {{ end }}
   </ul>
