--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -12,6 +12,8 @@
 {{ i18n "citation" }}
 </div>
 
+{{ partial "listposts.html" . }}
+
 
 <div class="featured-boxes">
   {{ range (sort (where .Site.AllPages "Params.featured" true) ".Params.title") }}
