--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -12,9 +12,7 @@
 {{ i18n "citation" }}
 </div>
 
-<div>
-{{ partial "listposts.html" . }}
-</div>
+{{ partial "news.html" . }}
 
 <div class="featured-boxes">
   {{ range (sort (where .Site.AllPages "Params.featured" true) ".Params.title") }}
