--- a/layouts/partials/news.html
+++ b/layouts/partials/news.html
@@ -1,6 +1,9 @@
     <style>
+         .news-section {
+            max-width: 700px;
+            margin: 0px auto 40px;
+         }
         .news-section h2 {
-            color: #ffcc00;
             margin-bottom: 1rem;
         }
 
@@ -26,7 +29,7 @@
         .post-title {
             font-size: 1.5rem;
             margin: 0;
-            color: #ffffff;
+            color: var(--white-color);
         }
 
         .post-title a {
@@ -35,13 +38,13 @@
         }
 
         .post-title a:hover {
-            color: #ffcc00;
+            color: var(--hover-color);
         }
 
         .post-date {
             margin: 0.5rem 0 0;
             font-size: 0.9rem;
-            color: #aaaaaa;
+            color: var(--light-text-color);
         }
 
     </style>
