--- a/layouts/partials/news.html
+++ b/layouts/partials/news.html
@@ -1,4 +1,5 @@
 <div class="news-section">
+   {{ if gt (len $newsPosts) 0 }}
    <h2>{{ i18n "news" }}</h2>
    <ul class="post-list">
        {{ range first 10 (where .Site.RegularPages "Params.news" true) }}
@@ -10,4 +11,5 @@
        </li>
        {{ end }}
    </ul>
+   {{ end }}
 </div>
