--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -6,12 +6,12 @@ margin: 0px auto 40px;
 margin-bottom: 1rem;
 }
 
-.post-list {
+.news-section .post-list {
 list-style: none;
 padding: 0;
 }
 
-.post-item {
+.news-section .post-item {
 background-color: #292929;
 margin: 1rem 0;
 padding: 1rem;
@@ -20,27 +20,27 @@ box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
 transition: transform 0.2s, background-color 0.3s;
 }
 
-.post-item:hover {
+.news-section .post-item:hover {
 background-color: #333333;
 }
 
-.post-title {
+.news-section .post-title {
 font-size: 1.5rem;
 margin: 0;
 color: var(--white-color);
 }
 
-.post-title a {
+.news-section .post-title a {
 text-decoration: none;
 color: inherit;
 }
 
-.post-title a:hover {
+.news-section .post-title a:hover {
 color: var(--hover-color);
 text-decoration: none;
 }
 
-.post-date {
+.news-section .post-date {
 margin: 0.5rem 0 0;
 font-size: 0.9rem;
 color: var(--light-text-color);
