--- a/layouts/partials/news.html
+++ b/layouts/partials/news.html
@@ -5,10 +5,8 @@
    <ul class="post-list">
        {{ range $newsPosts }}
        <li class="post-item">
-           <h3 class="post-title">
-               <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-           </h3>
-           <p class="post-date">{{ .Date.Format "January 2, 2006" }}</p>
+           <span class="post-date">{{ .Date.Format "January 2, 2006" }}</span>
+           <a href="{{ .RelPermalink }}">{{ .Title }}</a>
        </li>
        {{ end }}
    </ul>
