--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -9,6 +9,7 @@ margin-bottom: 1rem;
 .news-section .post-list {
 list-style: none;
 padding: 0;
+margin: 5px 0px 0px 0px;
 }
 
 .news-section .post-date {
