--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -3,7 +3,7 @@ max-width: 700px;
 margin: 0px auto 60px;
 }
 .news-section h2 {
-margin-bottom: 1rem;
+margin-bottom: 0px;
 }
 
 .news-section .post-list {
