--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -6,6 +6,10 @@ margin: 0px auto 60px;
 margin-bottom: 0px;
 }
 
+.news-section .post-item a {
+font-size: 20px;
+}
+
 .news-section .post-list {
 list-style: none;
 padding: 0;
